syntax = "proto3";

package auth_v1;

option go_package = "service/pkg/grpc/auth_v1";

import "google/api/annotations.proto";

message LoginRequest {
  string name = 1;
  string password = 2;
  int64 clientId = 3;
}

message LoginResponse {
  string token = 1;
}

message RegisterRequest {
  string name = 1;
  int64 clientId = 2;
  string password = 3;
  string role = 4;
}

message RegisterResponse {
  string token = 1;
}

message RegisterAdminRequest {
  string name = 1;
  int64 clientId = 2;
  string password = 3;
  string role = 4;
}

message RegisterAdminResponse {
  int64 id = 1;
}

message User {
  int64 id = 1;
  string password = 2;
  string name = 3;
}

message Client {
  int64 id = 1;
  string name = 2;
  repeated string roles = 3;
}

message RegisterClientRequest {
  string name = 1;
  repeated string roles = 2;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse){
    option (google.api.http) = {
      post: "/v1/auth/login"
      body: "*"
    };
  };
  rpc Register(RegisterRequest) returns (RegisterResponse){
    option (google.api.http) = {
      post: "/v1/auth/register"
      body: "*"
    };
  };
  rpc RegisterAdmin(RegisterAdminRequest) returns (RegisterAdminResponse){
    option (google.api.http) = {
    post: "/v1/auth/register/admin"
      body: "*"
    };
  };
  rpc RegisterClient(RegisterClientRequest) returns (Client){
    option (google.api.http) = {
      post: "/v1/auth/register/client"
      body: "*"
    };
  }

}